Add hover on some btn.

--- a/src/pug/components/_order.pug
+++ b/src/pug/components/_order.pug
@@ -46,6 +46,6 @@
       .order__form-field.order__form-field--date
         input(type="text" name="date" placeholder="ДАТА МЕРОПРИЯТИЯ")
 
-      +customBtnSubmit('cbutton--hover order__cbtn', "ОТПРАВИТЬ")
+      +customBtnSubmit('cbutton--active order__cbtn', "ОТПРАВИТЬ")
 
 // ORDER :: END
