--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -46,7 +46,7 @@ block content
               .contacts__form-field.contacts__form-field--message
                 textarea(placeholder="СООБЩЕНИЕ" name="message")
 
-              +customBtnSubmit('contacts__form-cbtn', "ОТПРАВИТЬ")
+              +customBtnSubmit('cbutton--active contacts__form-cbtn', "ОТПРАВИТЬ")
 
 
         include ./components/_social
