--- a/src/pug/components/_modal.pug
+++ b/src/pug/components/_modal.pug
@@ -2,20 +2,20 @@
 
 #callback.modal.mfp-hide
 
-  form.modal__form
+  form.modal__form(js-modal)
 
     p!= "14 чел. / 350 000 p."
     span!= "ЯПОНСКИЕ СЕЗОНЫ"
 
     .modal__form-field
-      input(type="text" placeholder="ВАШЕ ИМЯ")
+      input(type="text" name="name" placeholder="ВАШЕ ИМЯ")
 
     .modal__form-field.modal__form-field--phone
-      input(type="text" readonly=true placeholder="8 962 999 66 62")
+      input(type="tel" name="phone" placeholder="ВАШ НОМЕР")
 
     .modal__form-field.modal__form-field--email
-      input(type="email" placeholder="ПОЧТА")
+      input(type="email" name="email" placeholder="ПОЧТА")
 
-    +customBtn('modal__cbtn', "ОТПРАВИТЬ")
+    +customBtnSubmit('cbutton--active modal__cbtn', "ОТПРАВИТЬ")
 
 // FOOTER :: END
