--- a/src/sass/components/_season.sass
+++ b/src/sass/components/_season.sass
@@ -10,6 +10,8 @@
     background-repeat: no-repeat
     background-position: center
     background-size: cover
+    background-attachment: fixed
+
     +rmin(1024)
       min-height: 760px
     +rmin(1440)
@@ -181,6 +183,7 @@
       justify-content: center
       height: 0
       text-align: center
+      transition: 0.5s
 
       p,
       span
