Add animate gallery modal, prev and next btn.

--- a/src/pug/components/_gallery.pug
+++ b/src/pug/components/_gallery.pug
@@ -2,11 +2,9 @@
 
 #gallery.gallery.mfp-hide
   .container
-    .gallery__block.js-gallerySlider
+    .gallery__block.js-gallerySlider.animated
       -for(var i = 0; i < 5; i++)
         .gallery__block-item
           != "Some content"
-
-
 
 // FOOTER :: END
