--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -52,6 +52,21 @@
   animation-name: slideInUp
 
 
+// SLIDE-IN-UP
+// ===============
+@keyframes zoomIn
+  from
+    opacity: 0
+    transform: scale3d(0.3, 0.3, 0.3)
+
+  50%
+    opacity: 1
+
+.zoomIn
+  animation-name: zoomIn
+
+
+
 // FLIP-IN-X
 // ===============
 @keyframes flipInX
