--- a/src/sass/components/_gallery.sass
+++ b/src/sass/components/_gallery.sass
@@ -19,6 +19,10 @@
     +rmin(1920)
       min-height: 780px
 
+    .show &
+      animation-duration: 0.5s
+      animation-name: zoomIn
+
 
 .popup-buble.mfp-bg
   background-color: rgba($colorBlack, 0.5)
@@ -41,11 +45,19 @@
   
 .slick-prev,
 .slick-next
+  cursor: pointer
   position: absolute
   top: 50%
   margin-top: -30px
+
+  &:hover
+    i
+      opacity: 0.5
+      transition: opacity 0.3s ease-in-out
+
   i
     display: block
+    transition: opacity 0.3s ease-in-out
 
 .slick-prev
   left: -100px
