--- a/src/sass/components/_programs.sass
+++ b/src/sass/components/_programs.sass
@@ -9,6 +9,7 @@
     background-repeat: no-repeat
     background-position: center
     background-size: cover
+    background-attachment: fixed
     +rmin(1024)
       min-height: 760px
     +rmin(1440)
