--- a/src/pug/components/_menu.pug
+++ b/src/pug/components/_menu.pug
@@ -2,23 +2,25 @@
 
 #menu.menu.animated
 
-  img(src="./img/menuBg.jpg" class="menu__img menu__img--bg")
+  .row
 
-  .container
+    img(src="./img/menuBg.jpg" class="menu__img menu__img--bg")
 
-    a(href="homepage.html").menu__logo.icon-menuLogo
+    .container
 
-    img(src="./img/ImageGirl_menu.png" class="menu__img menu__img--girl")
+      a(href="homepage.html").menu__logo.icon-menuLogo
 
-    .menu__row
-      a(href="#" class="menu__back" js-backMenu)!= "<&nbsp;&nbsp;НАЗАД"
+      img(src="./img/ImageGirl_menu.png" class="menu__img menu__img--girl")
 
-      +customBtnLink("about.html", "cbutton--hover menu__cbtn", "О ГРУППЕ")
-      +customBtnLink("programs.html", "cbutton--hover menu__cbtn", "ПРОГРАММЫ")
-      +customBtnLink("school.html", "cbutton--hover menu__cbtn", "ШКОЛА")
-      +customBtnLink("contacts", "cbutton--hover menu__cbtn", "КОНТАКТЫ")
+      .menu__row
+        a(href="#" class="menu__back" js-backMenu)!= "<&nbsp;&nbsp;НАЗАД"
 
-      include ../components/_language
-      include ../components/_social
+        +customBtnLink("about.html", "cbutton--hover menu__cbtn", "О ГРУППЕ")
+        +customBtnLink("programs.html", "cbutton--hover menu__cbtn", "ПРОГРАММЫ")
+        +customBtnLink("school.html", "cbutton--hover menu__cbtn", "ШКОЛА")
+        +customBtnLink("contacts", "cbutton--hover menu__cbtn", "КОНТАКТЫ")
+
+        include ../components/_language
+        include ../components/_social
 
 // MENU :: END
