--- a/src/sass/components/_menu.sass
+++ b/src/sass/components/_menu.sass
@@ -20,7 +20,6 @@
   &__img
     z-index: 0
     position: absolute
-    display: block
     max-width: 100%
     max-height: 100%
     height: auto
@@ -30,11 +29,19 @@
       right: -5%
 
     &--bg
-      top: 0
+      bottom: 0
       left: 0
 
   .container
+    z-index: 1
     position: relative
+
+  .row
+    z-index: 0
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
 
   &__cbtn
     margin-bottom: 15px
