Replace img tag to bg style.

--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -21,7 +21,7 @@ block content
 
   .about__info
 
-    img(src="./img/ImageInfo_about.jpg")
+    //img(src="./img/ImageInfo_about.jpg")
 
     .container
 
