--- a/src/sass/components/_about.sass
+++ b/src/sass/components/_about.sass
@@ -59,6 +59,11 @@
     overflow: hidden
     position: relative
     background-color: $colorBlack
+    background-image: url("../img/ImageInfo_about.jpg")
+    background-repeat: no-repeat
+    background-size: cover
+    background-position: center
+    background-attachment: fixed
     +rmin(1024)
       min-height: 680px
     +rmin(1440)
