Small change style for adap and min-w

--- a/src/pug/school.pug
+++ b/src/pug/school.pug
@@ -28,7 +28,7 @@ block content
           .footer__question
             p!= 'ПО ВОПРОСАМ ЗАНЯТИЙ'
             a(href="tel:89199994858").footer__question-phone!= '8 (919) 999-48-58'
-            a(href="mailto:info@taiko.moscow").footer__question-email!= 'INFO@TAIKO.MOSCOW'
+            a(href="mailto:school@taiko.moscow").footer__question-email!= 'SCHOOL@TAIKO.MOSCOW'
 
       .school__wrap
         include ./components/_social
