--- a/src/sass/components/_programs.sass
+++ b/src/sass/components/_programs.sass
@@ -10,8 +10,7 @@
     background-position: center
     background-size: cover
     background-attachment: fixed
-    +rmin(1024)
-      min-height: 760px
+    min-height: 760px
     +rmin(1440)
       min-height: 860px
     +rmin(1920)
@@ -20,10 +19,9 @@
   &__wrap
     background-color: $colorNero
     box-shadow: inset 0 0 20px 5px rgba(0, 0, 0, 0.3)
-    +rmin(1024)
-      padding:
-        top: 70px
-        bottom: 70px
+    padding:
+      top: 70px
+      bottom: 70px
     +rmin(1440)
       padding:
         top: 80px
@@ -38,9 +36,8 @@
     position: relative
     background-color: $colorBlack
     box-shadow: inset 0 0 20px 5px rgba(0, 0, 0, 0.3)
-    +rmin(1024)
-      height: 400px
-      margin-bottom: 93px
+    height: 400px
+    margin-bottom: 93px
     +rmin(1440)
       height: 500px
       margin-bottom: 103px
@@ -74,8 +71,6 @@
         left: 50%
         transform: translate(-50%, -50%)
 
-
-
     &-info
       position: relative
       z-index: 1
@@ -89,8 +84,7 @@
         font:
           weight: bold
         text-align: center
-        +rmin(1024)
-          font-size: 20px
+        font-size: 20px
         +rmin(1440)
           font-size: 22px
         +rmin(1920)
@@ -107,9 +101,7 @@
       i
         margin-right: 30px
       span
-        font-size: 40px
-        +rmin(1024)
-          font-size: 25px
+        font-size: 25px
         +rmin(1440)
           font-size: 30px
         +rmin(1920)
@@ -125,8 +117,7 @@
 
   &__block
     display: flex
-    +rmin(1024)
-      margin-bottom: 93px
+    margin-bottom: 93px
     +rmin(1440)
       margin-bottom: 103px
     +rmin(1920)
@@ -139,8 +130,7 @@
     &--left
       width: 100%
       max-width: 600px
-      +rmin(1024)
-        margin-right: 120px
+      margin-right: 120px
       +rmin(1440)
         margin-right: 150px
       +rmin(1920)
@@ -149,8 +139,7 @@
       .programs__block--reverse &
         margin:
           right: 0
-        +rmin(1024)
-          margin-left: 120px
+          left: 120px
         +rmin(1440)
           margin-left: 150px
         +rmin(1920)
@@ -158,8 +147,7 @@
 
       > p
         color: $colorNobel
-        +rmin(1024)
-          font-size: 20px
+        font-size: 20px
         +rmin(1440)
           font-size: 22px
         +rmin(1920)
@@ -174,8 +162,7 @@
 
       > p
         margin-bottom: 80px
-        +rmin(1024)
-          font-size: 20px
+        font-size: 20px
         +rmin(1440)
           font-size: 22px
         +rmin(1920)
@@ -188,8 +175,7 @@
       margin-bottom: 10px
       background-color: $colorBlack
       box-shadow: 0 5px 21px 9px rgba(0, 0, 0, 0.3)
-      +rmin(1024)
-        height: 500px
+      height: 500px
       +rmin(1440)
         height: 550px
       +rmin(1920)
@@ -206,8 +192,7 @@
 
     &-header
       overflow: hidden
-      +rmin(1024)
-        margin-bottom: 40px
+      margin-bottom: 40px
       +rmin(1440)
         margin-bottom: 50px
       +rmin(1920)
@@ -224,8 +209,7 @@
         font:
           weight: bold
         color: $colorFuelYellow
-        +rmin(1024)
-          font-size: 25px
+        font-size: 25px
         +rmin(1440)
           font-size: 40px
         +rmin(1920)
@@ -240,8 +224,7 @@
         margin-right: 30px
       span
         color: $colorNobel
-        +rmin(1024)
-          font-size: 30px
+        font-size: 30px
         +rmin(1440)
           font-size: 35px
         +rmin(1920)
@@ -265,8 +248,7 @@
         weight: bold
       color: $colorFuelYellow
       text-align: center
-      +rmin(1024)
-        font-size: 30px
+      font-size: 30px
       +rmin(1440)
         font-size: 35px
       +rmin(1920)
@@ -274,15 +256,13 @@
 
     &-item
       overflow: hidden
-      //height: 720px
       margin:
         top: 30px
         left: 20px
         right: 20px
         bottom: 30px
       box-shadow: 0 5px 21px 9px rgba(0, 0, 0, 0.3)
-      +rmin(1024)
-        width: 420px
+      width: 420px
       +rmin(1440)
         width: 450px
       +rmin(1920)
@@ -292,7 +272,6 @@
       margin-top: 30px
       padding-left: 0
       text-align: center
-
 
       li
         cursor: pointer
