--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -31,6 +31,9 @@ body, html
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
+  +r(1023)
+    overflow-x: auto
+
 html
   &.is-activeMenu,
   &.is-activeOrder
