--- a/src/sass/components/_about.sass
+++ b/src/sass/components/_about.sass
@@ -5,8 +5,7 @@
     overflow: hidden
     position: relative
     background-color: $colorBlack
-    +rmin(1024)
-      min-height: 880px
+    min-height: 880px
     +rmin(1440)
       min-height: 980px
     +rmin(1920)
@@ -19,8 +18,7 @@
       max-width: 100%
       max-height: 100%
       height: auto
-      +rmin(1024)
-        left: -15%
+      left: -15%
       +rmin(1440)
         left: -10%
       +rmin(1920)
@@ -33,8 +31,7 @@
       top: 0
       right: 0
       height: 100%
-      +rmin(1024)
-        padding-top: 40px
+      padding-top: 40px
       +rmin(1440)
         padding-top: 50px
       +rmin(1920)
@@ -45,9 +42,8 @@
       width: 50%
 
     &-text
-      +rmin(1024)
-        padding-top: 58px
-        font-size: 30px
+      padding-top: 58px
+      font-size: 30px
       +rmin(1440)
         padding-top: 68px
         font-size: 35px
@@ -64,8 +60,7 @@
     background-size: cover
     background-position: center
     background-attachment: fixed
-    +rmin(1024)
-      min-height: 680px
+    min-height: 680px
     +rmin(1440)
       min-height: 880px
     +rmin(1920)
@@ -93,8 +88,7 @@
 
       &-item
         text-align: center
-        +rmin(1024)
-          font-size: 20px
+        font-size: 20px
         +rmin(1440)
           font-size: 22px
         +rmin(1920)
@@ -112,9 +106,8 @@
         padding:
           left: 0
         text-align: center
-        +rmin(1024)
-          padding-bottom: 40px
-          margin-bottom: 80px
+        padding-bottom: 40px
+        margin-bottom: 80px
         +rmin(1440)
           padding-bottom: 50px
           margin-bottom: 100px
@@ -133,8 +126,7 @@
             left: auto
             right: auto
           background-color: $colorNobel
-          +rmin(1024)
-            width: 95%
+          width: 95%
           +rmin(1440)
             width: 90%
           +rmin(1920)
@@ -146,8 +138,7 @@
           display: inline-block
           text-align: center
           transition: all .3s ease-in-out
-          +rmin(1024)
-            width: 180px
+          width: 180px
           +rmin(1440)
             width: 200px
           +rmin(1920)
@@ -163,8 +154,7 @@
               height: 5px
               background-color: $colorFuelYellow
               transition: all .3s ease-in-out
-              +rmin(1024)
-                bottom: -42px
+              bottom: -42px
               +rmin(1440)
                 bottom: -52px
               +rmin(1920)
@@ -181,8 +171,7 @@
               &:first-child
                 font:
                   weight: bold
-                +rmin(1024)
-                  font-size: 30px
+                  size: 30px
                 +rmin(1440)
                   font-size: 50px
                 +rmin(1920)
@@ -190,8 +179,7 @@
 
               &:last-child
                 color: $colorNobel
-                +rmin(1024)
-                  font-size: 20px
+                font-size: 20px
                 +rmin(1440)
                   font-size: 30px
                 +rmin(1920)
@@ -208,8 +196,7 @@
       margin-bottom: 120px
       background-color: $colorBlack
       box-shadow: 0 5px 21px 9px rgba(0, 0, 0, 0.3)
-      +rmin(1024)
-        min-height: 640px
+      min-height: 640px
       +rmin(1440)
         min-height: 680px
       +rmin(1920)
@@ -219,8 +206,7 @@
         z-index: 0
         position: absolute
         bottom: 0
-        +rmin(1024)
-          left: -15%
+        left: -15%
         +rmin(1440)
           left: -10%
         +rmin(1920)
@@ -238,8 +224,7 @@
         right: 90px
         bottom: 75px
       text-align: right
-      +rmin(1024)
-        min-height: 640px
+      min-height: 640px
       +rmin(1440)
         min-height: 680px
       +rmin(1920)
@@ -248,16 +233,14 @@
     &-col
       > p
         &:first-child
-          +rmin(1024)
-            font-size: 25px
+          font-size: 25px
           +rmin(1440)
             font-size: 30px
           +rmin(1920)
             font-size: 40px
         &:last-child
           color: $colorNobel
-          +rmin(1024)
-            font-size: 25px
+          font-size: 25px
           +rmin(1440)
             font-size: 30px
           +rmin(1920)
@@ -272,9 +255,8 @@
         weight: bold
       color: $colorFuelYellow
       text-align: center
-      +rmin(1024)
-        margin-bottom: 40px
-        font-size: 25px
+      margin-bottom: 40px
+      font-size: 25px
       +rmin(1440)
         margin-bottom: 50px
         font-size: 30px
@@ -290,7 +272,6 @@
         cursor: pointer
         position: relative
         width: (100% / 3)
-        //height: 900px
         background-color: $colorBlack
 
         &:hover
@@ -305,8 +286,7 @@
       p
         &:first-child
           color: $colorNobel
-          +rmin(1024)
-            font-size: 20px
+          font-size: 20px
           +rmin(1440)
             font-size: 22px
           +rmin(1920)
@@ -316,8 +296,7 @@
           margin-top: 5px
           font:
             weight: bold
-          +rmin(1024)
-            font-size: 25px
+            size: 25px
           +rmin(1440)
             font-size: 30px
           +rmin(1920)
@@ -345,9 +324,8 @@
 
   &__reviews
     background-color: $colorNero
-    +rmin(1024)
-      min-height: 880px
-      padding-top: 80px
+    min-height: 880px
+    padding-top: 80px
     +rmin(1440)
       min-height: 980px
       padding-top: 100px
@@ -363,9 +341,8 @@
         weight: bold
       color: $colorFuelYellow
       text-align: center
-      +rmin(1024)
-        margin-bottom: 141px
-        font-size: 25px
+      margin-bottom: 141px
+      font-size: 25px
       +rmin(1440)
         margin-bottom: 161px
         font-size: 30px
@@ -390,8 +367,7 @@
 
         > p
           padding-top: 15px
-          +rmin(1024)
-            font-size: 25px
+          font-size: 25px
           +rmin(1440)
             font-size: 30px
           +rmin(1920)
@@ -416,8 +392,7 @@
 
       p
         color: $colorNobel
-        +rmin(1024)
-          font-size: 20px
+        font-size: 20px
         +rmin(1440)
           font-size: 22px
         +rmin(1920)
@@ -425,8 +400,7 @@
 
       span
         display: block
-        +rmin(1024)
-          font-size: 25px
+        font-size: 25px
         +rmin(1440)
           font-size: 30px
         +rmin(1920)
