--- a/src/pug/components/_gallery.pug
+++ b/src/pug/components/_gallery.pug
@@ -5,6 +5,6 @@
     .gallery__block.js-gallerySlider.animated
       -for(var i = 0; i < 5; i++)
         .gallery__block-item
-          != "Some content"
+          img(data-lazy="./img/ImageBgMain_programs.jpg")
 
 // FOOTER :: END
