--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -22,6 +22,17 @@
 .fadeOut
   animation-name: fadeOut
   animation-duration: 0.8s
+// FADE-IN
+// ===============
+@keyframes fadeIn
+  from
+    opacity: 0
+  to
+    opacity: 1
+
+.fadeIn
+  animation-name: fadeIn
+  animation-duration: 0.8s
 
 
 // SLIDE-IN-DOWN
