--- a/src/sass/components/_programs.sass
+++ b/src/sass/components/_programs.sass
@@ -34,20 +34,17 @@
   &__container
     overflow: hidden
     position: relative
-    background-color: $colorBlack
     box-shadow: inset 0 0 20px 5px rgba(0, 0, 0, 0.3)
-    height: 400px
     margin-bottom: 93px
     +rmin(1440)
-      height: 500px
       margin-bottom: 103px
     +rmin(1920)
-      height: 600px
       margin-bottom: 113px
 
 
     &-video
-      position: absolute
+      z-index: 0
+      position: relative
       top: 0
       left: 0
       width: 100%
@@ -64,16 +61,15 @@
 
       img
         z-index: 0
-        position: absolute
+        position: relative
         max-width: 100%
-        max-height: 100%
-        top: 50%
-        left: 50%
-        transform: translate(-50%, -50%)
 
     &-info
-      position: relative
       z-index: 1
+      position: absolute
+      left: 0
+      top: 0
+      width: 100%
       height: 100%
       display: flex
       flex-direction: column
