Change image container to auto adaptive in programs page.

--- a/src/sass/components/_customButton.sass
+++ b/src/sass/components/_customButton.sass
@@ -28,6 +28,7 @@
   &.about__member-cbtn,
   &.contacts__main-cbtn,
   &.programs__main-cbtn,
+  &.programs__container-cbtn,
   &.season__box-cbtn,
   &.season__main-cbtn,
   &.season__concept-cbtn,
@@ -144,6 +145,7 @@
     .about__member-cbtn &,
     .contacts__main-cbtn &,
     .programs__main-cbtn &,
+    .programs__container-cbtn &,
     .season__box-cbtn &,
     .season__main-cbtn &,
     .season__concept-cbtn &,
