--- a/src/sass/components/_programs.sass
+++ b/src/sass/components/_programs.sass
@@ -126,9 +126,9 @@
     &--left
       width: 100%
       max-width: 600px
-      margin-right: 120px
+      margin-right: 80px
       +rmin(1440)
-        margin-right: 150px
+        margin-right: 130px
       +rmin(1920)
         margin-right: 180px
 
@@ -169,22 +169,14 @@
       position: relative
       width: 100%
       margin-bottom: 10px
-      background-color: $colorBlack
       box-shadow: 0 5px 21px 9px rgba(0, 0, 0, 0.3)
-      height: 500px
-      +rmin(1440)
-        height: 550px
-      +rmin(1920)
-        height: 600px
 
       img
         z-index: 0
-        position: absolute
+        position: relative
         max-width: 100%
         max-height: 100%
-        top: 50%
-        left: 50%
-        transform: translate(-50%, -50%)
+        display: block
 
     &-header
       overflow: hidden
