Add margin for school wrap.

--- a/src/sass/components/_school.sass
+++ b/src/sass/components/_school.sass
@@ -1,6 +1,11 @@
 // SCHOOL
 
 .school
+  &__wrap
+    &:first-child
+      margin-bottom: 120px
+    &:last-child
+      margin-bottom: 100px
   &__main
     overflow: hidden
     position: relative
