--- a/src/sass/components/_contacts.sass
+++ b/src/sass/components/_contacts.sass
@@ -6,13 +6,13 @@
     background-repeat: no-repeat
     background-position: center
     background-size: cover
-    min-height: 880px
+    min-height: 100vh
     padding-top: 80px
     +rmin(1440)
-      min-height: 980px
+      //min-height: 980px
       padding-top: 100px
     +rmin(1920)
-      min-height: 1080px
+      //min-height: 1080px
       padding-top: 120px
 
     &-cbtn
