--- a/src/sass/components/_school.sass
+++ b/src/sass/components/_school.sass
@@ -2,9 +2,8 @@
 
 .school
   &__wrap
-    &:first-child
-      margin-bottom: 120px
     &:last-child
+      margin-top: 120px
       margin-bottom: 100px
   &__main
     overflow: hidden
