--- a/src/sass/components/_season.sass
+++ b/src/sass/components/_season.sass
@@ -29,6 +29,7 @@
         font-size: 24px
 
   &__concept
+    overflow: hidden
     position: relative
     background-color: $colorBlack
     min-height: 1000px
