--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -50,6 +50,8 @@ html
     flex-direction: column
     // header offset ex
     padding-top: 120px
+    +r(1023)
+      padding-top: 0
 
 .container
   max-width: (1560 + (40 * 2)) * 1px
