--- a/src/sass/components/_contacts.sass
+++ b/src/sass/components/_contacts.sass
@@ -9,10 +9,8 @@
     min-height: 100vh
     padding-top: 80px
     +rmin(1440)
-      //min-height: 980px
       padding-top: 100px
     +rmin(1920)
-      //min-height: 1080px
       padding-top: 120px
 
     &-cbtn
@@ -22,6 +20,8 @@
       +rmin(1920)
         margin-bottom: 87px
 
+    .container
+      padding-bottom: 100px
 
     &-row
       display: flex
