--- a/src/sass/components/_season.sass
+++ b/src/sass/components/_season.sass
@@ -106,6 +106,7 @@
       .season__box-img
         &:before
           background-color: rgba($colorBlack, 0.75)
+          transition: background-color 0.3s ease-in-out
       .season__box-info
         opacity: 0
         visibility: hidden
@@ -129,6 +130,7 @@
         width: 100%
         height: 100%
         background-color: rgba($colorBlack, 0.5)
+        transition: background-color 0.3s ease-in-out
 
       img
         z-index: 0
