--- a/src/pug/components/_order.pug
+++ b/src/pug/components/_order.pug
@@ -44,7 +44,7 @@
           i.icon-viber_hover
 
       .order__form-field.order__form-field--date
-        input(type="text" name="date" placeholder="ДАТА МЕРОПРИЯТИЯ")
+        input(id="date" type="text" name="date" placeholder="ДАТА МЕРОПРИЯТИЯ")
 
       +customBtnSubmit('cbutton--active order__cbtn', "ОТПРАВИТЬ")
 
