--- a/src/pug/shared/_head.pug
+++ b/src/pug/shared/_head.pug
@@ -1,8 +1,8 @@
 // MADE WITH LOVE BY <> KHMELEVSKOY & ASSOCIATES </> www.khmelevskoy.co
 meta(charset="utf-8")
-title= title || 'Page name'
+title= title || 'Taiko'
 meta(http-equiv="X-UA-Compatible" content="IE=Edge")
-meta(name="viewport" content="width=device-width, initial-scale=1")
+// meta(name="viewport" content="width=1024")
 meta(name="theme-color" content="#fff")
 meta(name="format-detection" content="telephone=no")
 // remove for production
