--- a/src/sass/components/_homepage.sass
+++ b/src/sass/components/_homepage.sass
@@ -22,7 +22,8 @@
       background-repeat: no-repeat
       background-size: cover
       background-position: center
-      background-attachment: fixed
+      +rmin(1024)
+        background-attachment: fixed
 
     &-title
       position: relative
@@ -125,7 +126,7 @@
       background-color: $colorNero
 
       iframe
-        position: absolute
+        // position: absolute
         width: 100%
         height: 100%
 
