--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -19,7 +19,7 @@ p
   font-weight: normal
 
 body, html
-  background: white
+  background: $colorBlack
   color: $colorWhite
   font-family: 'CenturyGothic', Arial, sans-serif
   font-size: 16px
