Small fix position image and background-color body.

--- a/src/sass/components/_about.sass
+++ b/src/sass/components/_about.sass
@@ -273,6 +273,7 @@
         position: relative
         width: (100% / 3)
         background-color: $colorBlack
+        text-align: center
 
         &:hover
           .about__member-grid-hidden
